fix window prefix

--- a/democdn/public/index.html
+++ b/democdn/public/index.html
@@ -14,6 +14,9 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="./hello.umd.js"></script>
+  <script>
+    const global = globalThis;
+  </script>
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
