--- a/democdn/public/index.html
+++ b/democdn/public/index.html
@@ -15,9 +15,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"></script>
-  <!-- <script type="module" src="../src/hello.esm.js"></script> -->
+  <script type="module" src="../src/hello.esm.js"></script>
 
-  <script src="./hello.umd.js"></script>
+  <!-- <script src="./hello.umd.js"></script> -->
   <script>
     const global = globalThis;
   </script>
